# mappy-hour

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  morges-stream.out  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  resume-session.cmd  runSummerPriorityTiles.cmd  tsconfig.json  vitest.config.ts
.github/workflows/: deploy-mitch.yml  docker-publish.yml  publish-places.yml  refresh-mitch-atlas.yml
docs/: blog-context-infra-deployment.md  data-ingest.md  deploy-handoff.md  deploy.md  howto-solar-heatmap.md  runtime-config.md
docs/architecture/: adr-0001-daily-timeline-streaming.md  adr-0002-precompute-benchmark-and-tiling.md  adr-0003-caching-implementation-plan.md  adr-0004-precompute-multithread-worker-pool.md  adr-0005-batiments-v3-ombre-a-deux-niveaux.md  adr-0006-streaming-tile-architecture-and-canvas-rendering.md  adr-0007-sse-blob-gzip-compression.md  adr-0008-spatial-vbo-filtering-multi-region.md  adr-0009-intel-arc-webgpu-compute-retry.md  adr-0010-maillage-swisstopo-source-pour-precompute-batiments.md  adr-0011-precompute-vulkan-backend-decisions.md  adr-0012-runtime-shadow-backend-consolidation.md  adr-0013-sun-position-keyed-cache.md  adr-0014-swisstopo-polynomial-lv95-to-wgs84.md  adr-0015-suncalc-tile-center-approximation.md  (+29 more)
public/: indoor-comparison.html  manifest.webmanifest
scripts/: bench-tile-binary.ts  export-gingins-heatmap.ts  export-gingins-scene.ts  migrate-tiles-to-binary.ts
tools/wgpu-vulkan-probe/: Cargo.toml
tools/wgpu-vulkan-probe/src/: main.rs
(+506 files in other folders)
