[package]
name = "mappyhour-wgpu-vulkan-probe"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bytemuck = "1.25.0"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wgpu = { version = "29.0.1", default-features = false, features = ["std", "vulkan", "wgsl"] }
